# wfm_triage

./: .gitignore  Product Requirements Document- WFM Triage & Unit Economics Engine.txt
backend/: CMakeLists.txt  Dockerfile
backend/src/: main.cpp
backend/src/api/: analytics_controller.cpp  analytics_controller.h  copilot_controller.cpp  copilot_controller.h  deployment_controller.cpp  deployment_controller.h  rlhf_controller.cpp  rlhf_controller.h  router_controller.cpp  router_controller.h  simulator_controller.cpp  simulator_controller.h
backend/src/core/analytics/: drift_detector.cpp  drift_detector.h  metrics_aggregator.cpp  metrics_aggregator.h
backend/src/core/copilot/: context_generator.cpp  context_generator.h  rag_service.h
backend/src/core/deployment/: evm_calculator.cpp  evm_calculator.h  milestone_manager.cpp  milestone_manager.h  phase_tracker.cpp  phase_tracker.h
backend/src/core/rlhf/: feedback_collector.h  golden_dataset_manager.cpp  golden_dataset_manager.h
backend/src/core/router/: confidence_evaluator.cpp  confidence_evaluator.h  routing_engine.cpp  routing_engine.h
backend/src/core/simulator/: cost_calculator.cpp  cost_calculator.h  threshold_optimizer.cpp  threshold_optimizer.h
backend/src/models/: cost_parameters.h  cost_simulation.h  deployment_phase.h  evm_metrics.h  feedback_event.h  golden_dataset_entry.h  metrics_snapshot.h  milestone.h  operator_context.h  routing_decision.h  sop_document.h  ticket.cpp  ticket.h
backend/src/repository/: ticket_repository.h
backend/tests/core/: analytics_test.cpp  copilot_test.cpp  deployment_test.cpp  rlhf_test.cpp  router_test.cpp  simulator_test.cpp
frontend/: .dockerignore  Dockerfile  entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: SkeletonLoader.tsx
frontend/src/context/: ThresholdContext.tsx
frontend/src/modules/analytics/: AnalyticsDashboard.tsx
frontend/src/modules/analytics/__tests__/: AnalyticsDashboard.test.tsx
frontend/src/modules/analytics/components/: CostTrend.tsx  DriftAlert.tsx  Flywheel.tsx  MetricsChart.tsx
frontend/src/modules/analytics/components/__tests__/: CostTrend.test.tsx  DriftAlert.test.tsx  Flywheel.test.tsx  MetricsChart.test.tsx
frontend/src/modules/copilot/: CopilotView.tsx
frontend/src/modules/copilot/__tests__/: CopilotView.test.tsx
frontend/src/modules/copilot/components/: ActionButtons.tsx  RecommendationCard.tsx  SOPDisplay.tsx  TicketDetail.tsx
frontend/src/modules/copilot/components/__tests__/: ActionButtons.test.tsx  RecommendationCard.test.tsx  SOPDisplay.test.tsx  TicketDetail.test.tsx
frontend/src/modules/deployment/: DeploymentDashboard.tsx
frontend/src/modules/deployment/__tests__/: DeploymentDashboard.test.tsx
frontend/src/modules/deployment/components/: EVMMetrics.tsx  MilestoneTracker.tsx  PhaseTimeline.tsx
frontend/src/modules/deployment/components/__tests__/: EVMMetrics.test.tsx  MilestoneTracker.test.tsx  PhaseTimeline.test.tsx
frontend/src/modules/rlhf/: RLHFView.tsx
frontend/src/modules/rlhf/__tests__/: RLHFView.test.tsx
frontend/src/modules/rlhf/components/: DisagreementForm.tsx  FeedbackHistory.tsx
frontend/src/modules/rlhf/components/__tests__/: DisagreementForm.test.tsx  FeedbackHistory.test.tsx
frontend/src/modules/router/: RouterDashboard.tsx
frontend/src/modules/router/components/: ConfidenceGauge.tsx  RouteStatus.tsx  TicketQueue.tsx
frontend/src/modules/router/components/__tests__/: ConfidenceGauge.test.tsx  RouteStatus.test.tsx  RouterDashboard.test.tsx  TicketQueue.test.tsx
frontend/src/modules/simulator/: SimulatorView.tsx
frontend/src/modules/simulator/__tests__/: SimulatorView.test.tsx
frontend/src/modules/simulator/components/: CostBreakdown.tsx  ImpactChart.tsx  ThresholdSlider.tsx
frontend/src/modules/simulator/components/__tests__/: CostBreakdown.test.tsx  ImpactChart.test.tsx  ThresholdSlider.test.tsx
frontend/src/types/: analytics.ts  copilot.ts  deployment.ts  rlhf.ts  router.ts  simulator.ts  ticket.ts
